--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -4,6 +4,7 @@ domain-needed
 bogus-priv
 dhcp-range=192.168.24.10,192.168.24.100,2h
 address=/hotspot.localnet/192.168.24.1
+address=/sl.setup/10.0.0.1
 address=/connectivitycheck.gstatic.com/216.58.206.131
 address=/www.gstatic.com/216.58.206.99
 address=/www.apple.com/2.16.21.112
@@ -11,4 +12,4 @@ address=/captive.apple.com/17.253.35.204
 address=/clients3.google.com/216.58.204.46
 address=/www.msftconnecttest.com/13.107.4.52
 #Below is for the future implemantation of rfc 7710
-dhcp-option=160,http://hotspot.localnet/index.php
+dhcp-option=160,http://hotspot.localnet/
